--- a/less/reflex/variables.less
+++ b/less/reflex/variables.less
@@ -11,6 +11,6 @@
 
 @order-values: 12;
 
-@spacing-sm: 0.25em;
-@spacing-md: 0.5em;
-@spacing-lg: 1em;
+@spacing-sm: 5px;
+@spacing-md: 10px;
+@spacing-lg: 20px;
